--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@ body {
 	margin: 0px;
 }
 
-#pokemon-directory {
+#pokemon-directory, #error-page {
 	min-height: 100vh;
 	display: flex;
 	flex-direction: column;
